QtBeef/src/Qt/qgraphicsview.bf

extension CQt
{
	[LinkName("QGraphicsView_new")]
	public static extern QGraphicsView_Ptr* QGraphicsView_new(QWidget_Ptr* parent);
	[LinkName("QGraphicsView_new2")]
	public static extern QGraphicsView_Ptr* QGraphicsView_new2();
	[LinkName("QGraphicsView_new3")]
	public static extern QGraphicsView_Ptr* QGraphicsView_new3(QGraphicsScene_Ptr* scene);
	[LinkName("QGraphicsView_new4")]
	public static extern QGraphicsView_Ptr* QGraphicsView_new4(QGraphicsScene_Ptr* scene, QWidget_Ptr* parent);
	[LinkName("QGraphicsView_Delete")]
	public static extern void QGraphicsView_Delete(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_MetaObject")]
	public static extern QMetaObject_Ptr* QGraphicsView_MetaObject(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_Qt_Metacast")]
	public static extern void* QGraphicsView_Qt_Metacast(QGraphicsView_Ptr* self, c_char* param1);
	[LinkName("QGraphicsView_Qt_Metacall")]
	public static extern c_int QGraphicsView_Qt_Metacall(QGraphicsView_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QGraphicsView_Tr")]
	public static extern libqt_string QGraphicsView_Tr(c_char* s);
	[LinkName("QGraphicsView_SizeHint")]
	public static extern QSize_Ptr QGraphicsView_SizeHint(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_RenderHints")]
	public static extern void* QGraphicsView_RenderHints(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetRenderHint")]
	public static extern void QGraphicsView_SetRenderHint(QGraphicsView_Ptr* self, QPainter_RenderHint hint);
	[LinkName("QGraphicsView_SetRenderHints")]
	public static extern void QGraphicsView_SetRenderHints(QGraphicsView_Ptr* self, void* hints);
	[LinkName("QGraphicsView_Alignment")]
	public static extern void* QGraphicsView_Alignment(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetAlignment")]
	public static extern void QGraphicsView_SetAlignment(QGraphicsView_Ptr* self, void* alignment);
	[LinkName("QGraphicsView_TransformationAnchor")]
	public static extern QGraphicsView_ViewportAnchor QGraphicsView_TransformationAnchor(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetTransformationAnchor")]
	public static extern void QGraphicsView_SetTransformationAnchor(QGraphicsView_Ptr* self, QGraphicsView_ViewportAnchor anchor);
	[LinkName("QGraphicsView_ResizeAnchor")]
	public static extern QGraphicsView_ViewportAnchor QGraphicsView_ResizeAnchor(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetResizeAnchor")]
	public static extern void QGraphicsView_SetResizeAnchor(QGraphicsView_Ptr* self, QGraphicsView_ViewportAnchor anchor);
	[LinkName("QGraphicsView_ViewportUpdateMode")]
	public static extern QGraphicsView_ViewportUpdateMode QGraphicsView_ViewportUpdateMode(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetViewportUpdateMode")]
	public static extern void QGraphicsView_SetViewportUpdateMode(QGraphicsView_Ptr* self, QGraphicsView_ViewportUpdateMode mode);
	[LinkName("QGraphicsView_OptimizationFlags")]
	public static extern void* QGraphicsView_OptimizationFlags(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetOptimizationFlag")]
	public static extern void QGraphicsView_SetOptimizationFlag(QGraphicsView_Ptr* self, QGraphicsView_OptimizationFlag flag);
	[LinkName("QGraphicsView_SetOptimizationFlags")]
	public static extern void QGraphicsView_SetOptimizationFlags(QGraphicsView_Ptr* self, void* flags);
	[LinkName("QGraphicsView_DragMode")]
	public static extern QGraphicsView_DragMode QGraphicsView_DragMode(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetDragMode")]
	public static extern void QGraphicsView_SetDragMode(QGraphicsView_Ptr* self, QGraphicsView_DragMode mode);
	[LinkName("QGraphicsView_RubberBandSelectionMode")]
	public static extern Qt_ItemSelectionMode QGraphicsView_RubberBandSelectionMode(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetRubberBandSelectionMode")]
	public static extern void QGraphicsView_SetRubberBandSelectionMode(QGraphicsView_Ptr* self, Qt_ItemSelectionMode mode);
	[LinkName("QGraphicsView_RubberBandRect")]
	public static extern QRect_Ptr QGraphicsView_RubberBandRect(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_CacheMode")]
	public static extern void* QGraphicsView_CacheMode(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetCacheMode")]
	public static extern void QGraphicsView_SetCacheMode(QGraphicsView_Ptr* self, void* mode);
	[LinkName("QGraphicsView_ResetCachedContent")]
	public static extern void QGraphicsView_ResetCachedContent(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_IsInteractive")]
	public static extern bool QGraphicsView_IsInteractive(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetInteractive")]
	public static extern void QGraphicsView_SetInteractive(QGraphicsView_Ptr* self, bool allowed);
	[LinkName("QGraphicsView_Scene")]
	public static extern QGraphicsScene_Ptr* QGraphicsView_Scene(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetScene")]
	public static extern void QGraphicsView_SetScene(QGraphicsView_Ptr* self, QGraphicsScene_Ptr* scene);
	[LinkName("QGraphicsView_SceneRect")]
	public static extern QRectF_Ptr QGraphicsView_SceneRect(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetSceneRect")]
	public static extern void QGraphicsView_SetSceneRect(QGraphicsView_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_SetSceneRect2")]
	public static extern void QGraphicsView_SetSceneRect2(QGraphicsView_Ptr* self, double x, double y, double w, double h);
	[LinkName("QGraphicsView_Transform")]
	public static extern QTransform_Ptr QGraphicsView_Transform(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_ViewportTransform")]
	public static extern QTransform_Ptr QGraphicsView_ViewportTransform(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_IsTransformed")]
	public static extern bool QGraphicsView_IsTransformed(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetTransform")]
	public static extern void QGraphicsView_SetTransform(QGraphicsView_Ptr* self, QTransform_Ptr* matrix);
	[LinkName("QGraphicsView_ResetTransform")]
	public static extern void QGraphicsView_ResetTransform(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_Rotate")]
	public static extern void QGraphicsView_Rotate(QGraphicsView_Ptr* self, double angle);
	[LinkName("QGraphicsView_Scale")]
	public static extern void QGraphicsView_Scale(QGraphicsView_Ptr* self, double sx, double sy);
	[LinkName("QGraphicsView_Shear")]
	public static extern void QGraphicsView_Shear(QGraphicsView_Ptr* self, double sh, double sv);
	[LinkName("QGraphicsView_Translate")]
	public static extern void QGraphicsView_Translate(QGraphicsView_Ptr* self, double dx, double dy);
	[LinkName("QGraphicsView_CenterOn")]
	public static extern void QGraphicsView_CenterOn(QGraphicsView_Ptr* self, QPointF_Ptr* pos);
	[LinkName("QGraphicsView_CenterOn2")]
	public static extern void QGraphicsView_CenterOn2(QGraphicsView_Ptr* self, double x, double y);
	[LinkName("QGraphicsView_CenterOn3")]
	public static extern void QGraphicsView_CenterOn3(QGraphicsView_Ptr* self, QGraphicsItem_Ptr* item);
	[LinkName("QGraphicsView_EnsureVisible")]
	public static extern void QGraphicsView_EnsureVisible(QGraphicsView_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_EnsureVisible2")]
	public static extern void QGraphicsView_EnsureVisible2(QGraphicsView_Ptr* self, double x, double y, double w, double h);
	[LinkName("QGraphicsView_EnsureVisible3")]
	public static extern void QGraphicsView_EnsureVisible3(QGraphicsView_Ptr* self, QGraphicsItem_Ptr* item);
	[LinkName("QGraphicsView_FitInView")]
	public static extern void QGraphicsView_FitInView(QGraphicsView_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_FitInView2")]
	public static extern void QGraphicsView_FitInView2(QGraphicsView_Ptr* self, double x, double y, double w, double h);
	[LinkName("QGraphicsView_FitInView3")]
	public static extern void QGraphicsView_FitInView3(QGraphicsView_Ptr* self, QGraphicsItem_Ptr* item);
	[LinkName("QGraphicsView_Render")]
	public static extern void QGraphicsView_Render(QGraphicsView_Ptr* self, QPainter_Ptr* painter);
	[LinkName("QGraphicsView_Items")]
	public static extern void* QGraphicsView_Items(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_Items2")]
	public static extern void* QGraphicsView_Items2(QGraphicsView_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QGraphicsView_Items3")]
	public static extern void* QGraphicsView_Items3(QGraphicsView_Ptr* self, c_int x, c_int y);
	[LinkName("QGraphicsView_Items4")]
	public static extern void* QGraphicsView_Items4(QGraphicsView_Ptr* self, QRect_Ptr* rect);
	[LinkName("QGraphicsView_Items5")]
	public static extern void* QGraphicsView_Items5(QGraphicsView_Ptr* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QGraphicsView_Items7")]
	public static extern void* QGraphicsView_Items7(QGraphicsView_Ptr* self, QPainterPath_Ptr* path);
	[LinkName("QGraphicsView_ItemAt")]
	public static extern QGraphicsItem_Ptr* QGraphicsView_ItemAt(QGraphicsView_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QGraphicsView_ItemAt2")]
	public static extern QGraphicsItem_Ptr* QGraphicsView_ItemAt2(QGraphicsView_Ptr* self, c_int x, c_int y);
	[LinkName("QGraphicsView_MapToScene")]
	public static extern QPointF_Ptr QGraphicsView_MapToScene(QGraphicsView_Ptr* self, QPoint_Ptr* point);
	[LinkName("QGraphicsView_MapToScene4")]
	public static extern QPainterPath_Ptr QGraphicsView_MapToScene4(QGraphicsView_Ptr* self, QPainterPath_Ptr* path);
	[LinkName("QGraphicsView_MapFromScene")]
	public static extern QPoint_Ptr QGraphicsView_MapFromScene(QGraphicsView_Ptr* self, QPointF_Ptr* point);
	[LinkName("QGraphicsView_MapFromScene4")]
	public static extern QPainterPath_Ptr QGraphicsView_MapFromScene4(QGraphicsView_Ptr* self, QPainterPath_Ptr* path);
	[LinkName("QGraphicsView_MapToScene5")]
	public static extern QPointF_Ptr QGraphicsView_MapToScene5(QGraphicsView_Ptr* self, c_int x, c_int y);
	[LinkName("QGraphicsView_MapFromScene5")]
	public static extern QPoint_Ptr QGraphicsView_MapFromScene5(QGraphicsView_Ptr* self, double x, double y);
	[LinkName("QGraphicsView_InputMethodQuery")]
	public static extern QVariant_Ptr QGraphicsView_InputMethodQuery(QGraphicsView_Ptr* self, Qt_InputMethodQuery query);
	[LinkName("QGraphicsView_BackgroundBrush")]
	public static extern QBrush_Ptr QGraphicsView_BackgroundBrush(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetBackgroundBrush")]
	public static extern void QGraphicsView_SetBackgroundBrush(QGraphicsView_Ptr* self, QBrush_Ptr* brush);
	[LinkName("QGraphicsView_ForegroundBrush")]
	public static extern QBrush_Ptr QGraphicsView_ForegroundBrush(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_SetForegroundBrush")]
	public static extern void QGraphicsView_SetForegroundBrush(QGraphicsView_Ptr* self, QBrush_Ptr* brush);
	[LinkName("QGraphicsView_UpdateScene")]
	public static extern void QGraphicsView_UpdateScene(QGraphicsView_Ptr* self, void** rects);
	[LinkName("QGraphicsView_InvalidateScene")]
	public static extern void QGraphicsView_InvalidateScene(QGraphicsView_Ptr* self);
	[LinkName("QGraphicsView_UpdateSceneRect")]
	public static extern void QGraphicsView_UpdateSceneRect(QGraphicsView_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_RubberBandChanged")]
	public static extern void QGraphicsView_RubberBandChanged(QGraphicsView_Ptr* self, QRect_Ptr viewportRect, QPointF_Ptr fromScenePoint, QPointF_Ptr toScenePoint);
	[LinkName("QGraphicsView_SetupViewport")]
	public static extern void QGraphicsView_SetupViewport(QGraphicsView_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QGraphicsView_Event")]
	public static extern bool QGraphicsView_Event(QGraphicsView_Ptr* self, QEvent_Ptr* event);
	[LinkName("QGraphicsView_ViewportEvent")]
	public static extern bool QGraphicsView_ViewportEvent(QGraphicsView_Ptr* self, QEvent_Ptr* event);
	[LinkName("QGraphicsView_ContextMenuEvent")]
	public static extern void QGraphicsView_ContextMenuEvent(QGraphicsView_Ptr* self, QContextMenuEvent_Ptr* event);
